# dino-playground

./: .gitignore  README.md  pyproject.toml
configs/backbone/: dinov3_vitl16.yaml
configs/data/: ade20k.yaml
configs/experiments/: seg_ade20k_vitl16.yaml
configs/tasks/: segmentation_linear.yaml
notebooks/: 00_quickstart_features.ipynb  01_segmentation_unsupervised.ipynb  02_segmentation_linear_probe.ipynb  03_detection_dense_head.ipynb  04_depth_head.ipynb  05_3d_feature_fusion.ipynb
scripts/: download_coco.py  verify_notebooks.py
src/dinov3_lab/core/: backbone.py  registry.py
src/dinov3_lab/data/: datamodule.py
src/dinov3_lab/data/datasets/: ade20k.py  coco.py  mock.py  scannet.py
src/dinov3_lab/tasks/depth/: heads.py
src/dinov3_lab/tasks/detection/: heads.py
src/dinov3_lab/tasks/fusion3d/: tsdf.py
src/dinov3_lab/tasks/segmentation/: heads.py
