[project]
name = "dinov3-lab"
version = "0.1.0"
description = "DINOv3 Lab: A modular repository for DINOv3-based tasks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "einops>=0.6.0",
    "opencv-python>=4.7.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pytorch-lightning>=2.0.0",
    "timm>=0.9.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "open3d>=0.17.0",
    "trimesh>=3.20.0",
    "pycocotools>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
